part1/e11/manifests/pingpong.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingpong-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pingpong
  template:
    metadata:
      labels:
        app: pingpong
    spec:
      volumes:
        - name: logging-volume
          persistentVolumeClaim:
            claimName: loggingvol-claim
      containers:
        - name: pingpong
          image: vhmk/pingpong:2.0.0
          volumeMounts:
          - name: logging-volume
            mountPath: /app/files
