part1/e11/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: logoutput-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: logoutput-svc
            port:
              number: 2345
      - path: /pingpong
        pathType: Exact
        backend:
          service:
            name: pingpong-svc
            port:
              number: 2345
